--- a/packages/backend/test/docker-compose.yml
+++ b/packages/backend/test/docker-compose.yml
@@ -2,12 +2,12 @@ version: "3"
 
 services:
   redistest:
-    image: redis:7
+    image: redis:7-alpine
     ports:
       - "127.0.0.1:56312:6379"
 
   dbtest:
-    image: postgres:13
+    image: postgres:15-alpine
     ports:
       - "127.0.0.1:54312:5432"
     environment:
