--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -1,50 +1,37 @@
 {
+	"compileOnSave": false,
 	"compilerOptions": {
 		"allowJs": true,
-		"noEmitOnError": true,
-		"noImplicitAny": true,
-		"noImplicitReturns": true,
-		"noUnusedParameters": false,
-		"noUnusedLocals": false,
-		"noFallthroughCasesInSwitch": true,
+		"allowSyntheticDefaultImports": true,
+		"baseUrl": "./",
 		"declaration": false,
-		"sourceMap": false,
-		"target": "ES2022",
+		"emitDecoratorMetadata": true,
+		"experimentalDecorators": true,
+		"isolatedModules": true,
+		"lib": ["esnext"],
 		"module": "ESNext",
 		"moduleResolution": "node16",
-		"allowSyntheticDefaultImports": true,
-		"removeComments": false,
+		"noEmitOnError": true,
+		"noFallthroughCasesInSwitch": true,
+		"noImplicitReturns": true,
 		"noLib": false,
-		"strict": true,
-		"strictNullChecks": true,
-		"strictPropertyInitialization": false,
-		"skipLibCheck": true,
-		"experimentalDecorators": true,
-		"emitDecoratorMetadata": true,
-		"resolveJsonModule": true,
-		"isolatedModules": true,
-		"rootDir": "./src",
-		"baseUrl": "./",
+		"noUnusedLocals": false,
+		"noUnusedParameters": false,
+		"outDir": "./built",
 		"paths": {
 			"@/*": ["./src/*"]
 		},
-		"outDir": "./built",
-		"types": [
-			"node"
-		],
-		"typeRoots": [
-			"./node_modules/@types",
-			"./src/@types"
-		],
-		"lib": [
-			"esnext"
-		]
+		"removeComments": false,
+		"resolveJsonModule": true,
+		"rootDir": "./src",
+		"skipLibCheck": true,
+		"sourceMap": false,
+		"strict": true,
+		"strictPropertyInitialization": false,
+		"target": "ES2022",
+		"typeRoots": ["./node_modules/@types", "./src/@types"],
+		"types": ["node"]
 	},
-	"compileOnSave": false,
-	"include": [
-		"./src/**/*.ts"
-	],
-	"exclude": [
-		"./src/**/*.test.ts"
-	]
+	"exclude": ["./src/**/*.test.ts"],
+	"include": ["./src/**/*.ts"]
 }
