--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -164,6 +164,7 @@
 	"devDependencies": {
 		"@jest/globals": "29.6.1",
 		"@swc/jest": "0.2.26",
+		"@tsconfig/node-lts": "^18.12.3",
 		"@types/accepts": "1.3.5",
 		"@types/archiver": "5.3.2",
 		"@types/bcryptjs": "2.4.2",
