--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -165,6 +165,7 @@
 		"@jest/globals": "29.6.1",
 		"@swc/jest": "0.2.26",
 		"@tsconfig/node-lts": "^18.12.3",
+		"@tsconfig/strictest": "^2.0.1",
 		"@types/accepts": "1.3.5",
 		"@types/archiver": "5.3.2",
 		"@types/bcryptjs": "2.4.2",
