--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -204,7 +204,7 @@
 		"aws-sdk-client-mock": "3.0.0",
 		"cross-env": "7.0.3",
 		"eslint": "8.45.0",
-		"eslint-plugin-import": "2.27.5",
+		"eslint-plugin-import": "npm:eslint-plugin-i@2.28.0-2",
 		"execa": "7.1.1",
 		"jest": "29.6.1",
 		"jest-mock": "29.6.1"
