--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -56,7 +56,6 @@
 		"utf-8-validate": "^6.0.3"
 	},
 	"dependencies": {
-		"@anatine/zod-openapi": "^2.0.1",
 		"@aws-sdk/client-s3": "3.367.0",
 		"@aws-sdk/lib-storage": "3.367.0",
 		"@aws-sdk/node-http-handler": "3.360.0",
@@ -160,7 +159,8 @@
 		"web-push": "3.6.3",
 		"ws": "8.13.0",
 		"xev": "3.0.2",
-		"zod": "^3.21.4"
+		"zod": "^3.21.4",
+		"zod2spec": "link:..\\zod2spec"
 	},
 	"devDependencies": {
 		"@jest/globals": "29.6.1",
