--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,5 +1,6 @@
 packages:
- - 'packages/backend'
- - 'packages/frontend'
- - 'packages/sw'
- - 'packages/misskey-js'
+  - 'packages/backend'
+  - 'packages/frontend'
+  - 'packages/sw'
+  - 'packages/misskey-js'
+  - 'packages/zod2spec'
