--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -152,6 +152,7 @@
 		"tsc-alias": "1.8.7",
 		"tsconfig-paths": "4.2.0",
 		"twemoji-parser": "14.0.0",
+		"type-fest": "^4.1.0",
 		"typeorm": "0.3.17",
 		"typescript": "5.1.6",
 		"ulid": "2.3.0",
