--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -74,6 +74,7 @@
 		"@nestjs/core": "10.1.0",
 		"@nestjs/testing": "10.1.0",
 		"@peertube/http-signature": "1.7.0",
+		"@prisma/client": "5.1.0",
 		"@sinonjs/fake-timers": "10.3.0",
 		"@swc/cli": "0.1.62",
 		"@swc/core": "1.3.70",
@@ -209,6 +210,7 @@
 		"eslint-plugin-import": "npm:eslint-plugin-i@2.28.0-2",
 		"execa": "7.1.1",
 		"jest": "29.6.1",
-		"jest-mock": "29.6.1"
+		"jest-mock": "29.6.1",
+		"prisma": "^5.1.0"
 	}
 }
