開発環境の整備
- 貢献を受けられる状態にないため、GitHubのIssueテンプレートやPRテンプレートを削除
- `reviewer-lottery.yml`や`FUNDING.yml`を削除
- `README.md`を更新（WIP）
- backendの`tsc`を使ったビルドの設定を削除
- `package.json`の`scripts`を整理
- backendの`package.json`でのNode.jsのバージョン指定を更新
- backendの`package.json`の`main`フィールドを削除
- backendで`pnpm start`が実行できない問題を修正
- `.prettierrc`を追加
- backendでESLintとPrettierが協調するようにした

--- a/package.json
+++ b/package.json
@@ -20,21 +20,21 @@
 		"start": "pnpm check:connect && cd packages/backend && node ./built/boot/index.js",
 		"start:test": "cd packages/backend && cross-env NODE_ENV=test node ./built/boot/index.js",
 		"init": "pnpm migrate",
-		"migrate": "cd packages/backend && pnpm migrate",
-		"check:connect": "cd packages/backend && pnpm check:connect",
+		"migrate": "pnpm -C packages/backend migrate",
+		"check:connect": "pnpm -C packages/backend check:connect",
 		"migrateandstart": "pnpm migrate && pnpm start",
-		"gulp": "pnpm exec gulp build",
+		"gulp": "gulp build",
 		"watch": "pnpm dev",
 		"dev": "node ./scripts/dev.mjs",
 		"lint": "pnpm -r lint",
-		"cy:open": "pnpm cypress open --browser --e2e --config-file=cypress.config.ts",
-		"cy:run": "pnpm cypress run",
-		"e2e": "pnpm start-server-and-test start:test http://localhost:61812 cy:run",
-		"jest": "cd packages/backend && pnpm jest",
-		"jest-and-coverage": "cd packages/backend && pnpm jest-and-coverage",
+		"cy:open": "cypress open --browser --e2e --config-file=cypress.config.ts",
+		"cy:run": "cypress run",
+		"e2e": "start-server-and-test start:test http://localhost:61812 cy:run",
+		"jest": "pnpm -C packages/backend jest",
+		"jest-and-coverage": "pnpm -C packages/backend jest-and-coverage",
 		"test": "pnpm -r test",
 		"test-and-coverage": "pnpm -r test-and-coverage",
-		"format": "pnpm exec gulp format",
+		"format": "gulp format",
 		"clean": "node ./scripts/clean.js",
 		"clean-all": "node ./scripts/clean-all.js",
 		"cleanall": "pnpm clean-all"
