--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -1,21 +1,18 @@
 {
 	"name": "backend",
-	"main": "./index.js",
 	"private": true,
 	"type": "module",
 	"engines": {
-		"node": ">=18.16.0"
+		"node": ">=18.17.0"
 	},
 	"scripts": {
-		"start": "node ./built/index.js",
-		"start:test": "NODE_ENV=test node ./built/index.js",
-		"migrate": "pnpm typeorm migration:run -d ormconfig.js",
+		"start": "node ./built/boot/index.js",
+		"start:test": "cross-env NODE_ENV=test node ./built/boot/index.js",
+		"migrate": "typeorm migration:run -d ormconfig.js",
 		"check:connect": "node ./check_connect.js",
 		"build": "swc src -d built -D",
-		"watch:swc": "swc src -d built -D -w",
-		"build:tsc": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
-		"watch": "node watch.mjs",
-		"typecheck": "tsc --noEmit",
+		"watch": "swc src -d built -D -w",
+		"typecheck": "tsc",
 		"eslint": "eslint --quiet \"src/**/*.ts\"",
 		"lint": "pnpm typecheck && pnpm eslint",
 		"jest": "cross-env NODE_ENV=test node --experimental-vm-modules --experimental-import-meta-resolve node_modules/jest/bin/jest.js --forceExit",
@@ -150,8 +147,6 @@
 		"systeminformation": "5.18.7",
 		"tinycolor2": "1.6.0",
 		"tmp": "0.2.1",
-		"tsc-alias": "1.8.7",
-		"tsconfig-paths": "4.2.0",
 		"twemoji-parser": "14.0.0",
 		"type-fest": "^4.1.0",
 		"typeorm": "0.3.17",
@@ -172,7 +167,6 @@
 		"@types/accepts": "1.3.5",
 		"@types/archiver": "5.3.2",
 		"@types/bcryptjs": "2.4.2",
-		"@types/cbor": "6.0.0",
 		"@types/color-convert": "2.0.0",
 		"@types/content-disposition": "0.5.5",
 		"@types/fluent-ffmpeg": "2.1.21",
@@ -207,8 +201,9 @@
 		"aws-sdk-client-mock": "3.0.0",
 		"cross-env": "7.0.3",
 		"eslint": "8.45.0",
+		"eslint-config-prettier": "^8.10.0",
 		"eslint-plugin-import": "npm:eslint-plugin-i@2.28.0-2",
-		"execa": "7.1.1",
+		"eslint-plugin-prettier": "^5.0.0",
 		"jest": "29.6.1",
 		"jest-mock": "29.6.1",
 		"prisma": "^5.1.0"
