--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -3,28 +3,23 @@
 	"compilerOptions": {
 		"allowJs": true,
 		"baseUrl": "./",
-		"declaration": false,
-		"emitDecoratorMetadata": true,
 		"exactOptionalPropertyTypes": false, // TODO
 		"experimentalDecorators": true,
 		"isolatedModules": true,
 		"lib": ["esnext"],
 		"module": "ESNext",
-		"noEmitOnError": true,
+		"noEmit": true,
 		"noImplicitOverride": false, // TODO
 		"noLib": false,
 		"noPropertyAccessFromIndexSignature": false, // TODO
 		"noUncheckedIndexedAccess": false, // TODO
 		"noUnusedLocals": false, // TODO
 		"noUnusedParameters": false, // TODO
-		"outDir": "./built",
 		"paths": {
 			"@/*": ["./src/*"]
 		},
-		"removeComments": false,
 		"resolveJsonModule": true,
 		"rootDir": "./src",
-		"sourceMap": false,
 		"strictPropertyInitialization": false, // TODO
 		"typeRoots": ["./node_modules/@types", "./src/@types"],
 		"types": ["node"]
