--- a/packages/zod2spec/package.json
+++ b/packages/zod2spec/package.json
@@ -7,7 +7,8 @@
   "type": "module",
   "scripts": {
     "build": "swc -d built src",
-    "build:type": "tsc --declaration --emitDeclarationOnly --outDir built src/index.ts"
+    "build:type": "tsc --declaration --emitDeclarationOnly --outDir built src/index.ts",
+    "test": "vitest"
   },
   "devDependencies": {
     "@swc/cli": "^0.1.62",
@@ -16,7 +17,9 @@
     "@tsconfig/strictest": "^2.0.1",
     "@types/node": "^20.4.5",
     "prettier": "^3.0.0",
-    "typescript": "^5.1.6"
+    "type-fest": "^4.1.0",
+    "typescript": "^5.1.6",
+    "vitest": "0.34.1"
   },
   "dependencies": {
     "openapi3-ts": "^4.1.2",
