--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -118,6 +118,7 @@
 		"nodemailer": "6.9.3",
 		"nsfwjs": "2.4.2",
 		"oauth": "0.10.0",
+		"omick": "workspace:*",
 		"os-utils": "0.0.14",
 		"otpauth": "9.1.3",
 		"parse5": "7.1.2",
@@ -157,7 +158,7 @@
 		"ws": "8.13.0",
 		"xev": "3.0.2",
 		"zod": "^3.21.4",
-		"zod2spec": "link:..\\zod2spec"
+		"zod2spec": "workspace:*"
 	},
 	"devDependencies": {
 		"@jest/globals": "29.6.1",
