--- a/packages/zod2spec/tsconfig.json
+++ b/packages/zod2spec/tsconfig.json
@@ -1,7 +1,10 @@
 {
-	"extends": [
-		"@tsconfig/node18/tsconfig.json",
-		"@tsconfig/strictest/tsconfig.json"
-	],
-	"include": ["./src"]
+  "compilerOptions": {
+    "noEmit": true
+  },
+  "extends": [
+    "@tsconfig/node18/tsconfig.json",
+    "@tsconfig/strictest/tsconfig.json"
+  ],
+  "include": ["./src"]
 }
