--- a/packages/omick/tsconfig.json
+++ b/packages/omick/tsconfig.json
@@ -1,11 +1,5 @@
 {
-  "compilerOptions": {
-    "noEmit": true
-  },
   "exclude": ["./src/**/*.test.ts"],
-  "extends": [
-    "@tsconfig/strictest/tsconfig.json",
-    "@tsconfig/node-lts/tsconfig.json"
-  ],
+  "extends": ["../shared/tsconfig.json", "@tsconfig/node-lts/tsconfig.json"],
   "include": ["./src/**/*.ts"]
 }
