--- a/package.json
+++ b/package.json
@@ -50,10 +50,13 @@
 		"gulp-rename": "2.0.0",
 		"gulp-replace": "1.1.4",
 		"gulp-terser": "2.1.0",
-		"js-yaml": "4.1.0",
-		"typescript": "5.1.6"
+		"js-yaml": "4.1.0"
 	},
 	"devDependencies": {
+		"@swc/cli": "^0.1.62",
+		"@swc/core": "^1.3.96",
+		"@tsconfig/node-lts": "^18.12.5",
+		"@tsconfig/strictest": "^2.0.2",
 		"@types/gulp": "4.0.10",
 		"@types/gulp-rename": "2.0.1",
 		"@typescript-eslint/eslint-plugin": "5.61.0",
@@ -61,7 +64,8 @@
 		"cross-env": "7.0.3",
 		"cypress": "12.17.1",
 		"eslint": "8.45.0",
-		"start-server-and-test": "2.0.0"
+		"start-server-and-test": "2.0.0",
+		"typescript": "^5.2.2"
 	},
 	"optionalDependencies": {
 		"@tensorflow/tfjs-core": "4.4.0"
