--- a/packages/misskey-js/package.json
+++ b/packages/misskey-js/package.json
@@ -32,15 +32,12 @@
 		"jest-websocket-mock": "2.4.0",
 		"mock-socket": "9.2.1",
 		"openapi-typescript": "^6.4.0",
-		"tsd": "0.28.1",
-		"typescript": "5.1.6"
+		"tsd": "0.28.1"
 	},
 	"files": [
 		"built"
 	],
 	"dependencies": {
-		"@swc/cli": "0.1.62",
-		"@swc/core": "1.3.69",
 		"eventemitter3": "5.0.1",
 		"reconnecting-websocket": "4.4.0"
 	}
