--- a/packages/misskey-js/tsconfig.json
+++ b/packages/misskey-js/tsconfig.json
@@ -1,8 +1,7 @@
 {
-	"$schema": "http://json.schemastore.org/tsconfig",
 	"compilerOptions": {
 		"target": "ES2022",
-		"module": "ES2020",
+		"module": "Node16",
 		"moduleResolution": "node16",
 		"declaration": true,
 		"declarationMap": true,
@@ -15,19 +14,9 @@
 		"experimentalDecorators": true,
 		"noImplicitReturns": true,
 		"esModuleInterop": true,
-		"typeRoots": [
-			"node_modules/@types"
-		],
-		"lib": [
-			"esnext",
-			"dom"
-		]
+		"typeRoots": ["node_modules/@types"],
+		"lib": ["esnext", "dom"]
 	},
-	"include": [
-		"src/**/*"
-	],
-	"exclude": [
-		"node_modules",
-		"test/**/*"
-	]
+	"include": ["src/**/*"],
+	"exclude": ["node_modules", "test/**/*"]
 }
