--- a/packages/misskey-js/package.json
+++ b/packages/misskey-js/package.json
@@ -2,10 +2,11 @@
 	"name": "misskey-js",
 	"version": "0.0.16",
 	"description": "Misskey SDK for JavaScript",
+	"type": "module",
 	"main": "./built/index.js",
 	"types": "./built/index.d.ts",
 	"scripts": {
-		"build": "tsc",
+		"build": "swc -d built src",
 		"tsd": "tsd",
 		"api": "pnpm api-extractor run --local --verbose",
 		"api-prod": "pnpm api-extractor run --verbose",
@@ -24,9 +25,6 @@
 		"@swc/jest": "0.2.26",
 		"@types/jest": "29.5.3",
 		"@types/node": "20.4.2",
-		"@typescript-eslint/eslint-plugin": "5.61.0",
-		"@typescript-eslint/parser": "5.61.0",
-		"eslint": "8.45.0",
 		"jest": "29.6.1",
 		"jest-fetch-mock": "3.0.3",
 		"jest-websocket-mock": "2.4.0",
