--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "frontend",
 	"private": true,
+	"type": "module",
 	"scripts": {
 		"watch": "vite",
 		"build": "vite build",
@@ -48,6 +49,7 @@
 		"insert-text-at-cursor": "0.3.0",
 		"is-file-animated": "1.0.2",
 		"json5": "2.2.3",
+		"locales": "workspace:*",
 		"matter-js": "0.19.0",
 		"mfm-js": "0.23.3",
 		"misskey-js": "workspace:*",
@@ -111,15 +113,11 @@
 		"@types/uuid": "9.0.2",
 		"@types/websocket": "1.0.5",
 		"@types/ws": "8.5.5",
-		"@typescript-eslint/eslint-plugin": "5.61.0",
-		"@typescript-eslint/parser": "5.61.0",
 		"@vitest/coverage-v8": "0.33.0",
 		"@vue/runtime-core": "3.3.4",
 		"acorn": "8.10.0",
 		"cross-env": "7.0.3",
 		"cypress": "12.17.1",
-		"eslint": "8.45.0",
-		"eslint-plugin-import": "2.27.5",
 		"eslint-plugin-vue": "9.15.1",
 		"fast-glob": "3.3.0",
 		"happy-dom": "10.0.3",
@@ -127,7 +125,6 @@
 		"msw": "1.2.2",
 		"msw-storybook-addon": "1.8.0",
 		"nodemon": "3.0.1",
-		"prettier": "3.0.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"start-server-and-test": "2.0.0",
