--- a/packages/omick/.swcrc
+++ b/packages/omick/.swcrc
@@ -1,5 +1,11 @@
 {
   "$schema": "https://json.schemastore.org/swcrc",
-  "jsc": { "parser": { "syntax": "typescript" } },
-  "module": { "type": "es6" }
+  "jsc": {
+    "parser": {
+      "syntax": "typescript"
+    }
+  },
+  "module": {
+    "type": "es6"
+  }
 }
