--- a/packages/sw/package.json
+++ b/packages/sw/package.json
@@ -11,13 +11,11 @@
 	"dependencies": {
 		"esbuild": "0.18.11",
 		"idb-keyval": "6.2.1",
+		"locales": "workspace:*",
 		"misskey-js": "workspace:*"
 	},
 	"devDependencies": {
-		"@typescript-eslint/parser": "5.61.0",
-		"@typescript/lib-webworker": "npm:@types/serviceworker@0.0.67",
-		"eslint": "8.45.0",
-		"eslint-plugin-import": "2.27.5"
+		"@typescript/lib-webworker": "npm:@types/serviceworker@0.0.67"
 	},
 	"type": "module"
 }
