--- a/packages/zod2spec/package.json
+++ b/packages/zod2spec/package.json
@@ -12,9 +12,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.8.10",
-    "prettier": "^3.0.3",
-    "type-fest": "^4.6.0",
-    "vitest": "0.34.1"
+    "type-fest": "^4.6.0"
   },
   "dependencies": {
     "openapi3-ts": "^4.1.2",
