--- a/packages/zod2spec/tsconfig.json
+++ b/packages/zod2spec/tsconfig.json
@@ -1,4 +1,7 @@
 {
+  "compilerOptions": {
+    "noEmit": true
+  },
   "exclude": ["./src/**/*.test.ts"],
   "extends": ["../shared/tsconfig.json", "@tsconfig/node-lts/tsconfig.json"],
   "include": ["./src/**/*.ts"]
