zod2spec: remove type-fest

--- a/packages/zod2spec/package.json
+++ b/packages/zod2spec/package.json
@@ -11,8 +11,7 @@
     "test": "vitest"
   },
   "devDependencies": {
-    "@types/node": "^20.8.10",
-    "type-fest": "^4.6.0"
+    "@types/node": "^20.8.10"
   },
   "dependencies": {
     "openapi3-ts": "^4.1.2",
