--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -85,6 +85,7 @@
 		"got": "13.0.0",
 		"happy-dom": "10.0.3",
 		"hpagent": "1.2.0",
+		"identicon-generator": "workspace:*",
 		"ioredis": "5.3.2",
 		"ip-cidr": "3.1.0",
 		"ipaddr.js": "2.1.0",
@@ -113,9 +114,7 @@
 		"promise-limit": "2.7.0",
 		"pug": "3.0.2",
 		"punycode": "2.3.0",
-		"pureimage": "0.3.17",
 		"qrcode": "1.5.3",
-		"random-seed": "0.3.0",
 		"ratelimiter": "3.4.1",
 		"re2": "1.19.1",
 		"redis-lock": "0.1.4",
@@ -169,7 +168,6 @@
 		"@types/pug": "2.0.6",
 		"@types/punycode": "2.1.0",
 		"@types/qrcode": "1.5.1",
-		"@types/random-seed": "0.3.3",
 		"@types/ratelimiter": "3.4.4",
 		"@types/rename": "1.0.4",
 		"@types/sanitize-html": "2.9.0",
