--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"private": true,
 	"scripts": {
 		"build-pre": "node ./scripts/build-pre.js",
-		"build": "pnpm build-pre && pnpm -r build && pnpm gulp",
+		"build": "turbo run build && pnpm gulp",
 		"build-storybook": "pnpm --filter frontend build-storybook",
 		"start": "pnpm check:connect && cd packages/backend && node ./built/boot/index.js",
 		"start:test": "cd packages/backend && cross-env NODE_ENV=test node ./built/boot/index.js",
@@ -16,18 +16,15 @@
 		"gulp": "gulp build",
 		"watch": "pnpm dev",
 		"dev": "node ./scripts/dev.mjs",
-		"lint": "pnpm -r lint",
+		"lint": "turbo run lint",
 		"cy:open": "cypress open --browser --e2e --config-file=cypress.config.ts",
 		"cy:run": "cypress run",
 		"e2e": "start-server-and-test start:test http://localhost:61812 cy:run",
 		"jest": "pnpm -C packages/backend jest",
 		"jest-and-coverage": "pnpm -C packages/backend jest-and-coverage",
-		"test": "pnpm -r test",
-		"test-and-coverage": "pnpm -r test-and-coverage",
-		"format": "gulp format",
-		"clean": "node ./scripts/clean.js",
-		"clean-all": "node ./scripts/clean-all.js",
-		"cleanall": "pnpm clean-all"
+		"test": "turbo run test",
+		"test-and-coverage": "turbo run test-and-coverage",
+		"format": "gulp format"
 	},
 	"resolutions": {
 		"chokidar": "3.5.3",
@@ -59,6 +56,7 @@
 		"eslint-plugin-import": "npm:eslint-plugin-i@^2.29.0",
 		"prettier": "^3.0.3",
 		"start-server-and-test": "2.0.0",
+		"turbo": "^1.10.16",
 		"typescript": "^5.2.2",
 		"vitest": "0.33.0"
 	},
