--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
 		"lodash": "4.17.21"
 	},
 	"dependencies": {
-		"execa": "7.1.1",
+		"execa": "^8.0.1",
 		"gulp": "4.0.2",
 		"gulp-cssnano": "2.1.3",
 		"gulp-rename": "2.0.0",
