backend: update `ormconfig.js`
合わせて`check_connect.js`を削除した。
`check_connect.js`ではビルドされたbackendの`loadConfig`関数を直接呼び出しており、とても行儀が悪かった。
もしこういったことが必要なら、backend内にその処理を入れればいいと考える。
（必要になったときに実装予定。）

--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
 		"build-pre": "node ./scripts/build-pre.js",
 		"build": "turbo run build && pnpm gulp",
 		"build-storybook": "pnpm --filter frontend build-storybook",
-		"start": "pnpm check:connect && cd packages/backend && node ./built/boot/index.js",
-		"start:test": "cd packages/backend && cross-env NODE_ENV=test node ./built/boot/index.js",
+		"start": "node ./packages/backend/built/boot/index.js",
+		"start:test": "cross-env NODE_ENV=test node ./packages/backend/built/boot/index.js",
 		"init": "pnpm migrate",
 		"migrate": "pnpm -C packages/backend migrate",
-		"check:connect": "pnpm -C packages/backend check:connect",
 		"migrateandstart": "pnpm migrate && pnpm start",
 		"gulp": "gulp build",
 		"watch": "pnpm dev",
